[gd_scene load_steps=2 format=3 uid="uid://history_screen_001"]

[ext_resource type="Script" path="res://scripts/screens/HistoryScreen.gd" id="1"]

[node name="HistoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "기록 보기"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="훈련기록" type="VBoxContainer" parent="VBox/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/TabContainer/훈련기록"]
layout_mode = 2
size_flags_vertical = 3

[node name="TrainingList" type="VBoxContainer" parent="VBox/TabContainer/훈련기록/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsPanel" type="PanelContainer" parent="VBox/TabContainer/훈련기록"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBox/TabContainer/훈련기록/StatsPanel"]
layout_mode = 2
text = "훈련 통계"

[node name="경기기록" type="VBoxContainer" parent="VBox/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/TabContainer/경기기록"]
layout_mode = 2
size_flags_vertical = 3

[node name="MatchList" type="VBoxContainer" parent="VBox/TabContainer/경기기록/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsPanel" type="PanelContainer" parent="VBox/TabContainer/경기기록"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBox/TabContainer/경기기록/StatsPanel"]
layout_mode = 2
text = "경기 통계"

[node name="진행상황" type="VBoxContainer" parent="VBox/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProgressPanel" type="PanelContainer" parent="VBox/TabContainer/진행상황"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBox/TabContainer/진행상황/ProgressPanel"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBox/TabContainer/진행상황/ProgressPanel"]
layout_mode = 2
value = 50.0

[node name="ProgressLabel" type="Label" parent="VBox/TabContainer/진행상황/ProgressPanel"]
layout_mode = 2
text = "진행률: 50%"

[node name="AutoSavePanel" type="PanelContainer" parent="VBox/TabContainer/진행상황"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBox/TabContainer/진행상황/AutoSavePanel"]
layout_mode = 2
text = "자동 저장: 활성화"

[node name="분석" type="VBoxContainer" parent="VBox/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="TrainingTrendPanel" type="PanelContainer" parent="VBox/TabContainer/분석"]
layout_mode = 2
size_flags_vertical = 3

[node name="TrainingTrendChart" type="Control" parent="VBox/TabContainer/분석/TrainingTrendPanel"]
layout_mode = 2

[node name="MatchPerformancePanel" type="PanelContainer" parent="VBox/TabContainer/분석"]
layout_mode = 2
size_flags_vertical = 3

[node name="MatchPerformanceChart" type="Control" parent="VBox/TabContainer/분석/MatchPerformancePanel"]
layout_mode = 2

[node name="AttributeGrowthPanel" type="PanelContainer" parent="VBox/TabContainer/분석"]
layout_mode = 2
size_flags_vertical = 3

[node name="AttributeGrowthChart" type="Control" parent="VBox/TabContainer/분석/AttributeGrowthPanel"]
layout_mode = 2

[node name="PredictionPanel" type="PanelContainer" parent="VBox/TabContainer/분석"]
layout_mode = 2

[node name="PredictionLabel" type="Label" parent="VBox/TabContainer/분석/PredictionPanel"]
layout_mode = 2
text = "예측 분석"

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "뒤로가기"
